# bippy

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  http_verb.rs  interrupt.rs  main.rs  request.rs  response.rs  server.rs  threadpool.rs
src/http/: mod.rs  status.rs  verb.rs  version.rs
src/parser/: mod.rs  request.rs  request_line_parser.rs  request_parser.rs
src/server/: file.rs  mod.rs
