[package]
name = "bippy"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A really simple CLI HTTP server"
repository = "https://github.com/alicewriteswrongs/bippy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.9.0"
